--- a/scss/modules/_main.scss
+++ b/scss/modules/_main.scss
@@ -144,11 +144,15 @@
 			align-items: center;
 			justify-content: center;
 
+			li {
+				display: block;
+				width: 50%;
+			}
 			img {
 				margin-left: 5px;
 				margin-right: 5px;
-				width: 150px;
-				height: 150px;
+				width: 100px;
+				height: 100px;
 			}
 		}
 	}
